Added heading and paragraph

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
+    <h2>You get any question?</h2>
+    <p>Feel free to contact us below</p>
     <div class="container">
         <form action="/store" method="post">
             <div>
