Implemented CRUD API operation

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Bootdev API with Database Integration</h2>
     <div class="container">
-        <form action="/store" method="post">
+        <form action="/user/store" method="post">
             <div>
                 <label for="firstname">Enter your first name</label>
                 <input name="firstname" id="firstname" placeholder="Your first name">
